--- a/src/client/templates/home.html
+++ b/src/client/templates/home.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+          integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+          crossorigin=""/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <style type="text/css">
+        #map {
+            height: 600px;
+        }
+    </style>
     <title></title>
 </head>
 <body style="padding:10px;">
@@ -47,12 +53,23 @@
             </div>
         </div>
         <div class="tab-pane fade" id="spatial_search" role="tabpanel" aria-labelledby="spatial_search-tab">
-            TODO
+            <div class="input-group mb-3" style="padding: 20px;">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-success" type="submit" id="spatial_search_btn">Search
+                    </button>
+                </div>
+            </div>
+            <div id="map">
+            </div>
         </div>
     </div>
 </div>
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+        integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+        crossorigin=""></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="{{ url_for('static', filename='full_search.js') }}"></script>
+<script src="{{ url_for('static', filename='spatial_search.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
